[modify]index page modified

--- a/index.html
+++ b/index.html
@@ -853,27 +853,27 @@
                                                             <div class="col-xl-4 col-lg-4 col-md-6 col-12 p-1">
                                                                 <img class="img-fluid mb-lg-2 mb-2"
                                                                     src="images/sunset_market/1.webp"
-                                                                    alt="Sunset Market 1" />
+                                                                    alt="Sunset Market 1" style="aspect-ratio: 6 / 5; overflow: hidden;object-fit: cover;"//>
                                                             </div>
                                                             <div class="col-xl-4 col-lg-4 col-md-6 col-12 p-1">
                                                                 <img class="img-fluid mb-lg-2 mb-2"
                                                                     src="images/sunset_market/2.webp"
-                                                                    alt="Sunset Market 2" />
+                                                                    alt="Sunset Market 2" style="aspect-ratio: 6 / 5; overflow: hidden;object-fit: cover;"//>
                                                             </div>
                                                             <div class="col-xl-4 col-lg-4 col-md-6 col-12 p-1">
                                                                 <img class="img-fluid mb-lg-2 mb-2"
                                                                     src="images/sunset_market/3.webp"
-                                                                    alt="Sunset Market 3" />
+                                                                    alt="Sunset Market 3" style="aspect-ratio: 6 / 5; overflow: hidden;object-fit: cover;"//>
                                                             </div>
                                                             <div class="col-xl-4 col-lg-4 col-md-6 col-12 p-1">
                                                                 <img class="img-fluid mb-lg-2 mb-2"
                                                                     src="images/sunset_market/4.webp"
-                                                                    alt="Sunset Market 4" />
+                                                                    alt="Sunset Market 4" style="aspect-ratio: 6 / 5; overflow: hidden;object-fit: cover;"//>
                                                             </div>
                                                             <div class="col-xl-4 col-lg-4 col-md-6 col-12 p-1">
                                                                 <img class="img-fluid mb-lg-2 mb-2"
                                                                     src="images/sunset_market/5.webp"
-                                                                    alt="Sunset Market 5" />
+                                                                    alt="Sunset Market 5" style="aspect-ratio: 6 / 5; overflow: hidden;object-fit: cover;"//>
                                                             </div>
                                                         </div>
                                                     </div>
