--- a/jane-coffee.html
+++ b/jane-coffee.html
@@ -156,22 +156,22 @@
                     <div id="janeCarousel" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="assets/img/jane/1.webp" class="d-block w-100" alt="Janu Coffee 1">
+                                <img src="assets/img/jane/01.jpg" class="d-block w-100" alt="Janu Coffee 1">
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/img/jane/2.webp" class="d-block w-100" alt="Janu Coffee 2">
+                                <img src="assets/img/jane/02.jpg" class="d-block w-100" alt="Janu Coffee 2">
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/img/jane/3.webp" class="d-block w-100" alt="Janu Coffee 3">
+                                <img src="assets/img/jane/03.jpg" class="d-block w-100" alt="Janu Coffee 3">
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/img/jane/4.webp" class="d-block w-100" alt="Janu Coffee 4">
+                                <img src="assets/img/jane/06.jpg" class="d-block w-100" alt="Janu Coffee 4">
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/img/jane/5.webp" class="d-block w-100" alt="Janu Coffee 5">
+                                <img src="assets/img/jane/07.jpg" class="d-block w-100" alt="Janu Coffee 5">
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/img/jane/6.webp" class="d-block w-100" alt="Janu Coffee 6">
+                                <img src="assets/img/jane/09.jpg" class="d-block w-100" alt="Janu Coffee 6">
                             </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#janeCarousel" data-bs-slide="prev">
@@ -185,22 +185,22 @@
                     </div>
                     <div class="row mt-3">
                         <div class="col-md-2 col-4 mb-2">
-                            <img src="assets/img/jane/1.webp" class="img-fluid thumbnail" data-bs-target="#janeCarousel" data-bs-slide-to="0">
+                            <img src="assets/img/jane/01.jpg" class="img-fluid thumbnail" data-bs-target="#janeCarousel" data-bs-slide-to="0">
                         </div>
                         <div class="col-md-2 col-4 mb-2">
-                            <img src="assets/img/jane/2.webp" class="img-fluid thumbnail" data-bs-target="#janeCarousel" data-bs-slide-to="1">
+                            <img src="assets/img/jane/02.jpg" class="img-fluid thumbnail" data-bs-target="#janeCarousel" data-bs-slide-to="1">
                         </div>
                         <div class="col-md-2 col-4 mb-2">
-                            <img src="assets/img/jane/3.webp" class="img-fluid thumbnail" data-bs-target="#janeCarousel" data-bs-slide-to="2">
+                            <img src="assets/img/jane/03.jpg" class="img-fluid thumbnail" data-bs-target="#janeCarousel" data-bs-slide-to="2">
                         </div>
                         <div class="col-md-2 col-4 mb-2">
-                            <img src="assets/img/jane/4.webp" class="img-fluid thumbnail" data-bs-target="#janeCarousel" data-bs-slide-to="3">
+                            <img src="assets/img/jane/06.jpg" class="img-fluid thumbnail" data-bs-target="#janeCarousel" data-bs-slide-to="3">
                         </div>
                         <div class="col-md-2 col-4 mb-2">
-                            <img src="assets/img/jane/5.webp" class="img-fluid thumbnail" data-bs-target="#janeCarousel" data-bs-slide-to="4">
+                            <img src="assets/img/jane/07.jpg" class="img-fluid thumbnail" data-bs-target="#janeCarousel" data-bs-slide-to="4">
                         </div>
                         <div class="col-md-2 col-4 mb-2">
-                            <img src="assets/img/jane/6.webp" class="img-fluid thumbnail" data-bs-target="#janeCarousel" data-bs-slide-to="5">
+                            <img src="assets/img/jane/09.jpg" class="img-fluid thumbnail" data-bs-target="#janeCarousel" data-bs-slide-to="5">
                         </div>
                     </div>
                 </div>
