[modify]jane-coffee page modified

--- a/jane-coffee.html
+++ b/jane-coffee.html
@@ -126,7 +126,7 @@
     <!-- Banner Section -->
     <section class="banner-section">
         <div class="container-fluid p-0">
-            <div class="banner-image" style="background-image: url('assets/img/jane/2.webp'); height: 60vh; background-size: cover; background-position: center;">
+            <div class="banner-image" style="background-image: url('assets/img/jane/06.jpg'); height: 60vh; background-size: cover; background-position: center;">
                 <div class="banner-overlay d-flex align-items-center justify-content-center" style="background-color: rgba(0, 0, 0, 0.4); height: 100%;">
                     <div class="text-center text-white">
                         <h1 class="display-3 fw-bold" data-i18n="investing.restaurantsCafeBars.janeCoffee.name">Janu Coffee</h1>
