[modify]investing page img link modified

--- a/investing.html
+++ b/investing.html
@@ -546,7 +546,7 @@
 
                                     <div class="col-xl-4 col-md-6 col-12 p-2 mb-5">
                                         <a href="jane-coffee.html">
-                                            <img class="img-fluid mb-3 mb-lg-0" src="assets/img/jane/1.webp"
+                                            <img class="img-fluid mb-3 mb-lg-0" src="assets/img/jane/06"
                                                 alt="Janu Coffee"
                                                 style="max-height: 230px; height: 230px; object-fit: cover; width: 100%;" />
                                         </a>
