--- a/investing.html
+++ b/investing.html
@@ -584,7 +584,7 @@
                                             <p class="text-black-50 investing-description mb-0">
                                                 <span
                                                     data-i18n="investing.restaurantsCafeBars.lechonCo.description"
-                                                    class="restaurant-description">Collaboration with a culinary master
+                                                    class="restaurant-description">lol Collaboration with a culinary master
                                                     from Cebu, offering the famous Lechon roast pig. A must-try
                                                     traditional Filipino dish, located opposite H Hotel.</span>
                                             </p>
