--- a/investing.html
+++ b/investing.html
@@ -546,7 +546,7 @@
 
                                     <div class="col-xl-4 col-md-6 col-12 p-2 mb-5">
                                         <a href="jane-coffee.html">
-                                            <img class="img-fluid mb-3 mb-lg-0" src="assets/img/jane/06.jpg"
+                                            <img class="img-fluid mb-3 mb-lg-0" src="assets/img/jane/01.jpg"
                                                 alt="Janu Coffee"
                                                 style="max-height: 230px; height: 230px; object-fit: cover; width: 100%;" />
                                         </a>
@@ -584,7 +584,7 @@
                                             <p class="text-black-50 investing-description mb-0">
                                                 <span
                                                     data-i18n="investing.restaurantsCafeBars.lechonCo.description"
-                                                    class="restaurant-description">lol Collaboration with a culinary master
+                                                    class="restaurant-description">Collaboration with a culinary master
                                                     from Cebu, offering the famous Lechon roast pig. A must-try
                                                     traditional Filipino dish, located opposite H Hotel.</span>
                                             </p>
