[modify]investing page modified

--- a/investing.html
+++ b/investing.html
@@ -583,7 +583,7 @@
                                                 Hospitality Group</h4>
                                             <p class="text-black-50 investing-description mb-0">
                                                 <span
-                                                    data-i18n="investing.restaurantsCafeBars.lechonCo.description"
+                                                    data-i18n="investing.restaurantsCafeBars.lechonCo.shortDescription"
                                                     class="restaurant-description">Collaboration with a culinary master
                                                     from Cebu, offering the famous Lechon roast pig. A must-try
                                                     traditional Filipino dish, located opposite H Hotel.</span>
@@ -598,34 +598,7 @@
                                             </ul>
                                         </div>
                                     </div>
-                                    <!--test-->
-                                    <div class="col-xl-4 col-md-6 col-12 p-2 mb-5">
-                                        <a href="lechon-co.html">
-                                            <img class="img-fluid mb-3 mb-lg-0" src="images/lechon-co/1.webp"
-                                                alt="Lechon Co by H Hospitality Group"
-                                                style="max-height: 230px; height: 230px; object-fit: cover; width: 100%;" />
-                                        </a>
-                                        <div class="featured-text text-center text-lg-left pt-3">
-                                            <h4 data-i18n="investing.restaurantsCafeBars.lechonCo.name">Lechon Co by H
-                                                Hospitality Group</h4>
-                                            <p class="text-black-50 investing-description mb-0">
-                                                <span
-                                                    data-i18n="investing.restaurantsCafeBars.lechonCo.description"
-                                                    class="restaurant-description">Collaboration with a culinary master
-                                                    from Cebu, offering the famous Lechon roast pig. A must-try
-                                                    traditional Filipino dish, located opposite H Hotel.</span>
-                                            </p>
-                                            <ul class="list-unstyled text-muted">
-                                                <li data-i18n="investing.restaurantsCafeBars.lechonCo.seats">Seats: 65
-                                                </li>
-                                                <li data-i18n="investing.restaurantsCafeBars.lechonCo.openingYear">
-                                                    Opening Year: 2025</li>
-                                                <li data-i18n="investing.restaurantsCafeBars.lechonCo.location">
-                                                    Location: El Nido Town Center</li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                    <!--test-->
+                                    
 
                                     <div class="col-xl-4 col-md-6 col-12 p-2 mb-5">
                                         <a href="ver-de-el-nido.html">
