[modify]investing page shortDescription modified

--- a/investing.html
+++ b/investing.html
@@ -612,7 +612,7 @@
                                                 Nido</h4>
                                             <p class="text-black-50 investing-description mb-0">
                                                 <span
-                                                    data-i18n="investing.restaurantsCafeBars.verDeElNido.description"
+                                                    data-i18n="investing.restaurantsCafeBars.verDeElNido.shortDescription"
                                                     class="restaurant-description">El Nido's first all-vegan restaurant,
                                                     co-founded by renowned chefs from the US and Philippines. Features
                                                     6-meter high glass windows, air conditioning, and Beyond Meat
