[modify]investing page Piece of Sky modified

--- a/investing.html
+++ b/investing.html
@@ -420,7 +420,7 @@
                                             </h4>
                                             <p class="text-black-50 investing-description mb-0">
                                                 <span
-                                                    data-i18n="investing.restaurantsCafeBars.pieceOfSky.description"
+                                                    data-i18n="investing.restaurantsCafeBars.pieceOfSky.shortDescription"
                                                     class="restaurant-description">TripAdvisor's top-rated restaurant
                                                     with breathtaking views. From November 2024, a renowned Dubai chef
                                                     joins to offer a double impact of taste and visual delight.</span>
