--- a/investing.html
+++ b/investing.html
@@ -443,11 +443,11 @@
                                                 style="max-height: 230px; height: 230px; object-fit: cover; width: 100%;" />
                                         </a>
                                         <div class="featured-text text-center text-lg-left pt-3">
-                                            <h4 data-i18n="investing.restaurantsCafeBars.hAndCChinese.name">H&C Chinese
+                                            <h4>H&C Chinese
                                                 Restaurant</h4>
                                             <p class="text-black-50 investing-description mb-0">
                                                 <span
-                                                    data-i18n="investing.restaurantsCafeBars.hAndCChinese.description"
+                                                    
                                                     class="restaurant-description">The only Chinese restaurant in El
                                                     Nido town, offering authentic Chinese cuisine. Specialties include
                                                     live crab, live lobster, and steamed fish. Undergoing renovation in
