[modify]investing page modified

--- a/investing.html
+++ b/investing.html
@@ -390,7 +390,7 @@
                                                 Nacpan Beach</h4>
                                             <p class="text-black-50 investing-description mb-0">
                                                 <span
-                                                    data-i18n="investing.restaurantsCafeBars.sunmaiNacpanBeach.description"
+                                                    data-i18n="investing.restaurantsCafeBars.sunmaiNacpanBeach.shortDescription"
                                                     class="restaurant-description">Located at the heart of the famous
                                                     Nacpan Beach in Palawan, offering delicious pizza, Korean, and
                                                     Filipino cuisine. Highly recommended for both beach residents and
@@ -473,7 +473,7 @@
                                         <div class="featured-text text-center text-lg-left pt-3">
                                             <h4 data-i18n="investing.restaurantsCafeBars.unocha.name">Unocha</h4>
                                             <p class="text-black-50 investing-description mb-0">
-                                                <span data-i18n="investing.restaurantsCafeBars.unocha.description"
+                                                <span data-i18n="investing.restaurantsCafeBars.unocha.shortDescription"
                                                     class="restaurant-description">Famous Taiwanese bubble tea brand
                                                     from Kaohsiung, now in El Nido. Enjoy a refreshing bubble tea after
                                                     island hopping for the perfect tropical treat.</span>
@@ -499,7 +499,7 @@
                                                 Falafel</h4>
                                             <p class="text-black-50 investing-description mb-0">
                                                 <span
-                                                    data-i18n="investing.restaurantsCafeBars.3BrosFalafel.description"
+                                                    data-i18n="investing.restaurantsCafeBars.3BrosFalafel.shortDescription"
                                                     class="restaurant-description">Middle Eastern cuisine featuring
                                                     freshly made chickpea patties. Open until 1 AM, perfect for
                                                     late-night snack lovers.</span>
@@ -526,7 +526,7 @@
                                                 Coffee</h4>
                                             <p class="text-black-50 investing-description mb-0">
                                                 <span
-                                                    data-i18n="investing.restaurantsCafeBars.groundedCoffee.description"
+                                                    data-i18n="investing.restaurantsCafeBars.groundedCoffee.shortDescription"
                                                     class="restaurant-description">Located on the first floor of S
                                                     Resort, designed by renowned architect Justin. Unique style in
                                                     bathroom design and shared tables. Don't miss the Oat Milk
@@ -555,7 +555,7 @@
                                             </h4>
                                             <p class="text-black-50 investing-description mb-0">
                                                 <span
-                                                    data-i18n="investing.restaurantsCafeBars.janeCoffee.description"
+                                                    data-i18n="investing.restaurantsCafeBars.janeCoffee.shortDescription"
                                                     class="restaurant-description">H Hospitality Group's latest
                                                     investment, focusing on high-end hand-drip coffee experiences.
                                                     Professional baristas offer 1-2 hour refined coffee experiences for
