--- a/map/index.html
+++ b/map/index.html
@@ -10,6 +10,22 @@
     <div class="map-container">
         <div class="map-wrapper">
             <img src="images/map.webp" alt="地圖" class="map-image" draggable="false">
+            <div class="markers-container"></div>
+        </div>
+    </div>
+    
+    <!-- Tooltip -->
+    <div class="tooltip" id="tooltip">
+        <div class="tooltip-header">
+            <h3 class="tooltip-title"></h3>
+            <button class="tooltip-close">&times;</button>
+        </div>
+        <div class="tooltip-content">
+            <img class="tooltip-image" src="" alt="">
+            <div class="tooltip-info">
+                <p class="tooltip-address"></p>
+                <div class="tooltip-buttons"></div>
+            </div>
         </div>
     </div>
     
