[modify] map update

--- a/map/index.html
+++ b/map/index.html
@@ -41,7 +41,10 @@
             </div>
         </div>
     </div>
-    
+    <!-- 底部提示 -->
+    <div class="bottom-tooltip" id="bottomTooltip">
+        🖱️ 拖曳地圖來觀看所有投資項目
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
