--- a/oriental-spa-1.html
+++ b/oriental-spa-1.html
@@ -96,7 +96,9 @@
             </div>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html#about" data-i18n="nav.about">About</a>
+                                        <li class="nav-item"><a class="nav-link" href="index.html#about" data-i18n="nav.about">About</a>
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="map/index.html" target="_blank"  data-i18n="nav.map">Map</a>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="hotel.html" data-i18n="nav.hotel">Our Hotels</a></li>
                     <li class="nav-item"><a class="nav-link" href="investing.html" data-i18n="nav.investing">Investing</a></li>
