--- a/map/index.html
+++ b/map/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>可拖曳地圖</title>
+    <title>H Hospitality 企業地圖</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
