feat(地图): 添加全屏照片查看功能
在全屏模态框中显示点击的照片，支持点击关闭、ESC键关闭和背景点击关闭

--- a/map/index.html
+++ b/map/index.html
@@ -62,6 +62,14 @@
     <!-- 照片遮罩層 -->
     <div class="photo-overlay" id="photoOverlay"></div>
     
+    <!-- 全螢幕照片模態框 -->
+    <div class="fullscreen-modal" id="fullscreenModal">
+        <div class="fullscreen-modal-content">
+            <button class="fullscreen-close" id="fullscreenClose">&times;</button>
+            <img id="fullscreenImage" class="fullscreen-image" alt="全螢幕照片">
+        </div>
+    </div>
+    
     <script src="script.js"></script>
 </body>
 </html>
