--- a/investing.html
+++ b/investing.html
@@ -337,8 +337,8 @@
                                     </div>
                                 </div> -->
                                 <div class="col-xl-4 col-md-6 col-12 p-2 mb-5">
-                                    <a href="#">
-                                        <img class="img-fluid mb-3 mb-lg-0" src="images/milan-grace/1.webp"
+                                    <a href="zgarden.html">
+                                        <img class="img-fluid mb-3 mb-lg-0" src="images/zgarden/1.jpg"
                                             alt="Z Garden Hotel" />
                                     </a>
                                     <div class="featured-text text-center text-lg-left pt-3">
