--- a/zgarden.html
+++ b/zgarden.html
@@ -116,52 +116,29 @@
     </section>
 
     <!-- Hotel Introduction Section -->
-    <section class="hotel-intro">
-        <div class="container px-4 px-lg-5">
-            <div class="row gx-4 gx-lg-5 align-items-center">
-                <div class="col-lg-8">
-                    <h2 class="fw-bold mb-4" data-i18n="hotel.zGardenHotel.introTitle">Z Garden Hotel — A Travel Destination Created for Generation Z</h2>
-                    <p class="lead mb-4" data-i18n="hotel.zGardenHotel.introDescription1">
-                        Located in the heart of El Nido, right in front of the port, just a 3-minute walk from H Hotel, with an unbeatable convenient location. Whether you want to go island hopping, dining, or exploring the town, you can set off anytime.
-                    </p>
-                    <p class="mb-4" data-i18n="hotel.zGardenHotel.introDescription2">
-                        All guest rooms will be newly renovated in 2026, designed with minimalist yet sophisticated aesthetics. The highlight of the rooms is the entire fair-faced concrete art wall, inspired by Japanese fair-faced concrete textures, presenting a low-key, clean, and modern visual atmosphere. Combined with soft lighting and comfortable furniture, guests can feel relaxation and taste coexist from the moment they enter the room.
-                    </p>
-                    <p class="mb-4" data-i18n="hotel.zGardenHotel.introDescription3">
-                        The core spirit of Z Garden Hotel is to provide young, comfortable, style and convenience-loving Generation Z travelers with a reasonably priced, refreshing environment, and perfectly located accommodation choice.
-                    </p>
-                </div>
-                <div class="col-lg-4">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title" data-i18n="hotel.info">Hotel Info</h5>
-                            <p class="card-text"><strong data-i18n="hotel.location">Location:</strong> <span data-i18n="hotel.zGardenHotel.location">El Nido Town Center, Palawan</span></p>
-                            <p class="card-text"><strong data-i18n="hotel.openingYear">Opening Year:</strong> <span data-i18n="hotel.zGardenHotel.openingYear">2026</span></p>
-                            <p class="card-text"><strong data-i18n="hotel.rooms">Rooms:</strong> <span data-i18n="hotel.zGardenHotel.rooms">30</span></p>
-                            <p class="card-text"><strong data-i18n="hotel.style">Style:</strong> <span data-i18n="hotel.zGardenHotel.style">Minimalist, Modern</span></p>
-                        </div>
+    <section class="hotel-intro py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <h1 class="mb-4" data-i18n="hotel.zGardenHotel.name">Z Garden Hotel</h1>
+                    <p class="lead mb-4" data-i18n="hotel.zGardenHotel.description">A stylish boutique hotel in the heart of El Nido, perfect for urban explorers. Enjoy modern amenities and easy access to the town's attractions at Z Garden Hotel.</p>
+                    <div class="hotel-info mb-4">
+                        <h5 data-i18n="hotel.info">Hotel Info</h5>
+                        <p><strong data-i18n="hotel.rating">Rating:</strong> <span class="text-warning">★★★★ 4.5</span></p>
+                        <p><strong data-i18n="hotel.location">Location:</strong> <span data-i18n="hotel.zGardenHotel.location">El Nido Port, Palawan</span></p>
                     </div>
                 </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Image Gallery Section -->
-    <section class="bg-light py-5">
-        <div class="container px-4 px-lg-5">
-            <div class="row gx-4 gx-lg-5">
-                <div class="col-12">
-                    <h2 class="text-center mb-5" data-i18n="hotel.gallery">Hotel Gallery</h2>
-                    <div id="zGardenHotelCarousel" class="carousel slide mb-4" data-bs-ride="carousel">
+                <div class="col-lg-6">
+                    <div id="zGardenHotelCarousel" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="images/zgarden/1.jpg" class="d-block w-100" alt="Z Garden Hotel Exterior" style="height: 500px; object-fit: cover;">
+                                <img src="images/zgarden/1.jpg" class="d-block w-100" alt="Z Garden Hotel" style="height: 500px; object-fit: contain; background-color: #f8f9fa;">
                             </div>
                             <div class="carousel-item">
-                                <img src="images/zgarden/2.jpg" class="d-block w-100" alt="Z Garden Hotel Interior" style="height: 500px; object-fit: cover;">
+                                <img src="images/zgarden/2.jpg" class="d-block w-100" alt="Z Garden Hotel" style="height: 500px; object-fit: contain; background-color: #f8f9fa;">
                             </div>
                             <div class="carousel-item">
-                                <img src="images/zgarden/3.jpg" class="d-block w-100" alt="Z Garden Hotel Room" style="height: 500px; object-fit: cover;">
+                                <img src="images/zgarden/3.jpg" class="d-block w-100" alt="Z Garden Hotel" style="height: 500px; object-fit: contain; background-color: #f8f9fa;">
                             </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#zGardenHotelCarousel" data-bs-slide="prev">
@@ -173,15 +150,15 @@
                             <span class="visually-hidden" data-i18n="common.next">Next</span>
                         </button>
                     </div>
-                    <div class="row">
-                        <div class="col-md-4 mb-3">
-                            <img src="images/zgarden/1.jpg" class="img-fluid thumbnail" data-bs-target="#zGardenHotelCarousel" data-bs-slide-to="0" style="height: 120px; object-fit: cover; cursor: pointer;">
+                    <div class="row mt-2 gx-1">
+                        <div class="col-4 px-1">
+                            <img src="images/zgarden/1.jpg" class="img-fluid thumbnail" data-bs-target="#zGardenHotelCarousel" data-bs-slide-to="0" style="height: 120px; object-fit: cover; cursor: pointer; width: 100%;">
                         </div>
-                        <div class="col-md-4 mb-3">
-                            <img src="images/zgarden/2.jpg" class="img-fluid thumbnail" data-bs-target="#zGardenHotelCarousel" data-bs-slide-to="1" style="height: 120px; object-fit: cover; cursor: pointer;">
+                        <div class="col-4 px-1">
+                            <img src="images/zgarden/2.jpg" class="img-fluid thumbnail" data-bs-target="#zGardenHotelCarousel" data-bs-slide-to="1" style="height: 120px; object-fit: cover; cursor: pointer; width: 100%;">
                         </div>
-                        <div class="col-md-4 mb-3">
-                            <img src="images/zgarden/3.jpg" class="img-fluid thumbnail" data-bs-target="#zGardenHotelCarousel" data-bs-slide-to="2" style="height: 120px; object-fit: cover; cursor: pointer;">
+                        <div class="col-4 px-1">
+                            <img src="images/zgarden/3.jpg" class="img-fluid thumbnail" data-bs-target="#zGardenHotelCarousel" data-bs-slide-to="2" style="height: 120px; object-fit: cover; cursor: pointer; width: 100%;">
                         </div>
                     </div>
                 </div>
@@ -189,34 +166,7 @@
         </div>
     </section>
 
-    <!-- Features Section -->
-    <section class="py-5">
-        <div class="container px-4 px-lg-5">
-            <div class="row gx-4 gx-lg-5 text-center">
-                <div class="col-md-4 mb-5">
-                    <div class="feature-icon">
-                        <i class="fas fa-map-marker-alt"></i>
-                    </div>
-                    <h4 class="fw-bold" data-i18n="hotel.zGardenHotel.feature1Title">Prime Location</h4>
-                    <p class="text-muted" data-i18n="hotel.zGardenHotel.feature1Desc">Right in front of El Nido port, 3-minute walk from H Hotel</p>
-                </div>
-                <div class="col-md-4 mb-5">
-                    <div class="feature-icon">
-                        <i class="fas fa-palette"></i>
-                    </div>
-                    <h4 class="fw-bold" data-i18n="hotel.zGardenHotel.feature2Title">Modern Design</h4>
-                    <p class="text-muted" data-i18n="hotel.zGardenHotel.feature2Desc">Minimalist aesthetics with Japanese fair-faced concrete art walls</p>
-                </div>
-                <div class="col-md-4 mb-5">
-                    <div class="feature-icon">
-                        <i class="fas fa-heart"></i>
-                    </div>
-                    <h4 class="fw-bold" data-i18n="hotel.zGardenHotel.feature3Title">Gen Z Focused</h4>
-                    <p class="text-muted" data-i18n="hotel.zGardenHotel.feature3Desc">Designed for young travelers who value style and convenience</p>
-                </div>
-            </div>
-        </div>
-    </section>
+
 
     <!-- Footer-->
     <footer class="footer bg-black small text-center text-white-50">
