--- a/zgarden.html
+++ b/zgarden.html
@@ -12,16 +12,28 @@
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
+    <link
+        href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+        rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <!-- i18next for translation -->
     <script src="https://cdn.jsdelivr.net/npm/i18next@21.6.16/dist/umd/i18next.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/i18next-browser-languagedetector@6.1.8/dist/umd/i18nextBrowserLanguageDetector.min.js"></script>
+    <script
+        src="https://cdn.jsdelivr.net/npm/i18next-browser-languagedetector@6.1.8/dist/umd/i18nextBrowserLanguageDetector.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/i18next-http-backend@1.4.5/dist/umd/i18nextHttpBackend.min.js"></script>
     <style>
+        #mainNav.navbar-shrink .langSelectDesktop {
+            margin-top: 15px;
+        }
+
+        #mainNav .langSelectDesktop {
+            margin-top: 25px;
+        }
+
+
         .banner-section {
             position: relative;
             height: 60vh;
@@ -78,29 +90,44 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href="index.html">
-                <img src="assets/img/hospitality-logo.png" alt="H Hospitality Group">
-            </a>
-            <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                Menu
-                <i class="fas fa-bars"></i>
-            </button>
+            <a class="navbar-brand" href="index.html"> <img class="img-fluid mb-lg-0"
+                    src="assets/img/h_hotel_group_logo.svg" width="120px" alt="h_hotel_group" /></a>
+            <div class="d-flex align-items-center">
+                <div class="d-lg-none me-2">
+                    <select id="langSelect" class="form-select bg-dark text-white"
+                        style="width: auto; padding-right: 20px;" aria-label="Language selection">
+                        <option value="en">🇺🇸 English</option>
+                        <option value="zh">🇹🇼 繁中</option>
+                        <option value="zh-cn">🇨🇳 簡中</option>
+                    </select>
+                </div>
+                <button class="navbar-toggler navbar-toggler-right ms-2" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <i class="fas fa-bars"></i>
+                </button>
+            </div>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html" data-i18n="nav.about">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html#about" data-i18n="nav.about">About</a>
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="map/index.html" target="_blank"
+                            data-i18n="nav.map">Map</a>
+                    </li>
                     <li class="nav-item"><a class="nav-link" href="hotel.html" data-i18n="nav.hotel">Our Hotels</a></li>
-                    <li class="nav-item"><a class="nav-link" href="investing.html" data-i18n="nav.investing">Our Investments</a></li>
-                    <li class="nav-item"><a class="nav-link" href="timeline.html" data-i18n="nav.timeline">Timeline</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contact.html" data-i18n="nav.contact">Contact</a></li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="languageDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            <i class="fas fa-globe"></i> Language
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="languageDropdown">
-                            <li><a class="dropdown-item" href="#" onclick="changeLanguage('en')">English</a></li>
-                            <li><a class="dropdown-item" href="#" onclick="changeLanguage('zh')">中文</a></li>
-                            <li><a class="dropdown-item" href="#" onclick="changeLanguage('zh-CN')">简体中文</a></li>
-                        </ul>
+                    <li class="nav-item"><a class="nav-link" href="investing.html"
+                            data-i18n="nav.investing">Investing</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html#timeline"
+                            data-i18n="nav.timeline">Timeline</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html#contact"
+                            data-i18n="nav.contact">Contact</a></li>
+                    <li class="nav-item d-none d-lg-block">
+                        <select id="langSelectDesktop" class="langSelectDesktop form-select bg-dark text-white"
+                            aria-label="Language selection">
+                            <option value="en">🇺🇸 English</option>
+                            <option value="zh">🇹🇼 繁中</option>
+                            <option value="zh-cn">🇨🇳 簡中</option>
+                        </select>
                     </li>
                 </ul>
             </div>
@@ -121,44 +148,59 @@
             <div class="row">
                 <div class="col-lg-6">
                     <h1 class="mb-4" data-i18n="hotel.zGardenHotel.name">Z Garden Hotel</h1>
-                    <p class="lead mb-4" data-i18n="hotel.zGardenHotel.description">A stylish boutique hotel in the heart of El Nido, perfect for urban explorers. Enjoy modern amenities and easy access to the town's attractions at Z Garden Hotel.</p>
+                    <p class="lead mb-4" data-i18n="hotel.zGardenHotel.description">A stylish boutique hotel in the
+                        heart of El Nido, perfect for urban explorers. Enjoy modern amenities and easy access to the
+                        town's attractions at Z Garden Hotel.</p>
                     <div class="hotel-info mb-4">
                         <h5 data-i18n="hotel.info">Hotel Info</h5>
-                        <p><strong data-i18n="hotel.rating">Rating:</strong> <span class="text-warning">★★★★ 4.5</span></p>
-                        <p><strong data-i18n="hotel.location">Location:</strong> <span data-i18n="hotel.zGardenHotel.location">El Nido Port, Palawan</span></p>
+                        <p><strong data-i18n="hotel.rating">Rating:</strong> <span class="text-warning">★★★★ 4.5</span>
+                        </p>
+                        <p><strong data-i18n="hotel.location">Location:</strong> <span
+                                data-i18n="hotel.zGardenHotel.location">El Nido Port, Palawan</span></p>
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <div id="zGardenHotelCarousel" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="images/zgarden/1.jpg" class="d-block w-100" alt="Z Garden Hotel" style="height: 500px; object-fit: contain; background-color: #f8f9fa;">
+                                <img src="images/zgarden/1.jpg" class="d-block w-100" alt="Z Garden Hotel"
+                                    style="height: 500px; object-fit: contain; background-color: #f8f9fa;">
                             </div>
                             <div class="carousel-item">
-                                <img src="images/zgarden/2.jpg" class="d-block w-100" alt="Z Garden Hotel" style="height: 500px; object-fit: contain; background-color: #f8f9fa;">
+                                <img src="images/zgarden/2.jpg" class="d-block w-100" alt="Z Garden Hotel"
+                                    style="height: 500px; object-fit: contain; background-color: #f8f9fa;">
                             </div>
                             <div class="carousel-item">
-                                <img src="images/zgarden/3.jpg" class="d-block w-100" alt="Z Garden Hotel" style="height: 500px; object-fit: contain; background-color: #f8f9fa;">
+                                <img src="images/zgarden/3.jpg" class="d-block w-100" alt="Z Garden Hotel"
+                                    style="height: 500px; object-fit: contain; background-color: #f8f9fa;">
                             </div>
                         </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#zGardenHotelCarousel" data-bs-slide="prev">
+                        <button class="carousel-control-prev" type="button" data-bs-target="#zGardenHotelCarousel"
+                            data-bs-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                             <span class="visually-hidden" data-i18n="common.previous">Previous</span>
                         </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#zGardenHotelCarousel" data-bs-slide="next">
+                        <button class="carousel-control-next" type="button" data-bs-target="#zGardenHotelCarousel"
+                            data-bs-slide="next">
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                             <span class="visually-hidden" data-i18n="common.next">Next</span>
                         </button>
                     </div>
                     <div class="row mt-2 gx-1">
                         <div class="col-4 px-1">
-                            <img src="images/zgarden/1.jpg" class="img-fluid thumbnail" data-bs-target="#zGardenHotelCarousel" data-bs-slide-to="0" style="height: 120px; object-fit: cover; cursor: pointer; width: 100%;">
+                            <img src="images/zgarden/1.jpg" class="img-fluid thumbnail"
+                                data-bs-target="#zGardenHotelCarousel" data-bs-slide-to="0"
+                                style="height: 120px; object-fit: cover; cursor: pointer; width: 100%;">
                         </div>
                         <div class="col-4 px-1">
-                            <img src="images/zgarden/2.jpg" class="img-fluid thumbnail" data-bs-target="#zGardenHotelCarousel" data-bs-slide-to="1" style="height: 120px; object-fit: cover; cursor: pointer; width: 100%;">
+                            <img src="images/zgarden/2.jpg" class="img-fluid thumbnail"
+                                data-bs-target="#zGardenHotelCarousel" data-bs-slide-to="1"
+                                style="height: 120px; object-fit: cover; cursor: pointer; width: 100%;">
                         </div>
                         <div class="col-4 px-1">
-                            <img src="images/zgarden/3.jpg" class="img-fluid thumbnail" data-bs-target="#zGardenHotelCarousel" data-bs-slide-to="2" style="height: 120px; object-fit: cover; cursor: pointer; width: 100%;">
+                            <img src="images/zgarden/3.jpg" class="img-fluid thumbnail"
+                                data-bs-target="#zGardenHotelCarousel" data-bs-slide-to="2"
+                                style="height: 120px; object-fit: cover; cursor: pointer; width: 100%;">
                         </div>
                     </div>
                 </div>
@@ -189,7 +231,7 @@
                 backend: {
                     loadPath: '/locales/{{lng}}/translation.json'
                 }
-            }, function(err, t) {
+            }, function (err, t) {
                 // Initialize translation
                 updateContent();
             });
