feat: 添加Gentleman Cut理发厅页面和翻译内容
添加Gentleman Cut理发厅的详情页面，包含图片展示和多语言支持
更新investing.html以包含新理发厅的链接
在翻译文件中添加Gentleman Cut的相关内容

--- a/investing.html
+++ b/investing.html
@@ -337,7 +337,7 @@
                                     </div>
                                 </div> -->
                                 <div class="col-xl-4 col-md-6 col-12 p-2 mb-5">
-                                    <a href="zgarden.html">
+                                    <a href="z-garden-hotel.html">
                                         <img class="img-fluid mb-3 mb-lg-0" src="images/zgarden/1.jpg"
                                             alt="Z Garden Hotel" />
                                     </a>
@@ -803,6 +803,22 @@
                                             class="tour-description">Inspired by Taiwan's famous night markets, this
                                             beachside market offers a variety of food and crafts, allowing visitors to
                                             enjoy sunset views while experiencing local culture.</span>
+                                    </p>
+                                </div>
+                            </div>
+
+                            <div class="col-xl-4 col-md-6 col-12 p-2 mb-5">
+                                <a href="gentleman-cut.html">
+                                    <img class="img-fluid mb-3 mb-lg-0" src="images/gentleman_cut/1.webp"
+                                        alt="Gentleman Cut Barbershop"
+                                        style="max-height: 230px; height: 230px; object-fit: cover; width: 100%;" />
+                                </a>
+                                <div class="featured-text text-center text-lg-left pt-3">
+                                    <h4 data-i18n="investing.travel.gentlemanCut.name">Gentleman Cut Barbershop</h4>
+                                    <p class="text-black-50 investing-description mb-0">
+                                        <span data-i18n="investing.travel.gentlemanCut.description"
+                                            class="tour-description">Gentleman Cut Barbershop offers premium grooming
+                                            services in a relaxing atmosphere.</span>
                                     </p>
                                 </div>
                             </div>
